[gd_scene load_steps=3 format=3 uid="uid://kos1d6rh003n"]

[ext_resource type="Theme" uid="uid://cgmjqqgr3bnmh" path="res://resources/styles/main_theme.tres" id="1_1umrv"]
[ext_resource type="Script" path="res://scripts/page.gd" id="2_vvdp6"]

[node name="Page" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_1umrv")
script = ExtResource("2_vvdp6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainerRight" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 8
mouse_force_pass_scroll_events = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainerRight"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/PanelContainerRight/VBoxContainer"]
layout_mode = 2
text = "Характеристики затмения"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainerRight/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_force_pass_scroll_events = false
horizontal_scroll_mode = 0
vertical_scroll_mode = 2
scroll_deadzone = 855

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="Param1" type="HBoxContainer" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Param1"]
layout_mode = 2
text = "Дата:"
horizontal_alignment = 1

[node name="Data" type="Label" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Param1"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Param2" type="HBoxContainer" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Param2"]
layout_mode = 2
text = "Начало:"
horizontal_alignment = 1

[node name="Data" type="Label" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Param2"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Param3" type="HBoxContainer" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Param3"]
layout_mode = 2
text = "Конец:"
horizontal_alignment = 1

[node name="Data" type="Label" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Param3"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Param4" type="HBoxContainer" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Param4"]
layout_mode = 2
text = "Тип:"
horizontal_alignment = 1

[node name="Data" type="Label" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Param4"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="Param5" type="VBoxContainer" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Param5"]
layout_mode = 2
text = "Максимальная фаза:"

[node name="Data" type="Label" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Param5"]
layout_mode = 2
horizontal_alignment = 2

[node name="Param6" type="VBoxContainer" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Param6"]
layout_mode = 2
text = "Время макс. фазы:"

[node name="Data" type="Label" parent="MarginContainer/PanelContainerRight/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/Param6"]
layout_mode = 2
horizontal_alignment = 2

[node name="PanelContainerLeft" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
mouse_force_pass_scroll_events = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainerLeft"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/PanelContainerLeft/VBoxContainer"]
layout_mode = 2
text = "Данные о затмениях
(дата(коэффициент))"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainerLeft/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
mouse_force_pass_scroll_events = false
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainerLeft/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainerLeft/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Return" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_force_pass_scroll_events = false
text = "Назад"

[connection signal="pressed" from="MarginContainer/Return" to="." method="_on_return_pressed"]
